# sommerfluss

./: .gitignore  Cargo.toml  README.md
packaging/: PKGBUILD
sc/: Cargo.toml
sc/src/: main.rs
sfwm/: Cargo.toml
sfwm/examples/: autostart  river-init
sfwm/src/: frame.rs  ipc.rs  main.rs  monitor.rs  protocol.rs
